# Vital-Utilities

./: .gitignore  CLAUDE.md  LICENSE  README.md  latest_update_meta.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  improvement_template.yml
.github/workflows/: codeql-analysis.yml  dotnet-core.yml  ensure_code_gen.yml  generate-meta-on-release.yaml  manual.yml  node.js.yml  ossar-analysis.yml  release.yml  release_pr.yml  release_with_checks.yml  signed-release.yml  snyk-infrastructure-analysis.yml  test-vitalrustservice.yml  test_webapp.yml  vital-service-tests.yml  web-app-test.yml
Screenshots/: readme.md
Source/: .gitignore  GenerateCode.ts  GenerateUpdateMeta.ts  Vital.code-workspace  build-dotnet.ts  build.ts  pack-dotnetservice.ts  pack-rustservice.ts  pack-vitalservice.ts  pack-web.ts  package-lock.json  package.json  pnpm-lock.yaml  readme.md  test.json  tsconfig.json
Source/Assets/: Vital.afdesign
Source/Backend/: AdditionalEnumGenerator.cs  Program.cs  ReinforcedTypingsConfiguration.cs  VitalService.csproj  appsettings.json
Source/Backend/Controllers/: ProcessController.cs
Source/Backend/Data/: MetricDbContext.cs
Source/Backend/Data/App/: ManagedModel.cs
Source/Backend/Migrations/: 20211229173714_f.Designer.cs
Source/Backend/Migrations/MetricDb/: 20220110045037_waadw.Designer.cs  20220110045037_waadw.cs  20220113182517_afaadfwsaf.Designer.cs  20220113190004_afaadfwsaaf.cs
Source/Backend/Properties/PublishProfiles/: FolderProfile.pubxml
Source/Backend/Services/PerformanceServices/: SoftwarePerformanceService.cs
Source/Backend/Stores/: ProfileStore.cs
Source/Backend/Utilities/: Affinity.cs
Source/ClientApp/: .eslintignore  .eslintrc.json  build.ts  generateRustTypings.ts  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
Source/ClientApp/config/: webpack.config.js  webpackDevServer.config.js
Source/ClientApp/public/: index.html
Source/ClientApp/src/: App.tsx  custom.scss  example.test.ts  index.css  index.tsx  main.tsx  routeTree.gen.ts  router.tsx  variables.scss
Source/ClientApp/src-tauri/: Cargo.toml  tauri.conf.json  wix-template.wxs
Source/ClientApp/src-tauri/icons/: icon.icns
Source/ClientApp/src-tauri/src/: backend_types.rs  commands.rs  file.rs  main.rs  nvidia.rs  settings.rs  software.rs
Source/ClientApp/src-tauri/src/commands/: api_commands.rs  commands.rs  mod.rs  vital_service.rs
Source/ClientApp/src-tauri/src/db/: metrics.rs  mod.rs
Source/ClientApp/src-tauri/src/machine_stats/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  net.rs  power.rs
Source/ClientApp/src-tauri/src/models/: dto.rs  metrics.rs  mod.rs
Source/ClientApp/src-tauri/src/platform/: linux.rs  macos.rs  windows.rs
Source/ClientApp/src-tauri/src/services/: config_applyer.rs  metrics_storage.rs
Source/ClientApp/src-tauri/src/stores/: machine_data_store.rs  settings_store.rs
Source/ClientApp/src/Dtos/: ClientApiDto.ts  Dto.ts  UiModel.ts
Source/ClientApp/src/Redux/: States.ts
Source/ClientApp/src/Services/: ApiPortHandler.tsx  ServiceLiveMonitor.tsx  SignalR.tsx
Source/ClientApp/src/Utilities/: TauriCommands.tsx
Source/ClientApp/src/components/: FormatUtils.tsx  LocalStorageKeys.ts  OverlayContent.tsx  PerfBadge.tsx  ResizableTable.tsx  ShowOnHover.tsx  Table.scss  Table.tsx  ViewportHook.ts  VirtualizedProcessTable.tsx
Source/ClientApp/src/pages/: ConnectionIssue.tsx  Home.tsx  Info.tsx  Performance.tsx  Processes.tsx  Settings.tsx  SpashScreen.tsx  home.scss
Source/ClientApp/src/routes/: __root.tsx  index.tsx  performance.tsx  settings.tsx
Source/ClientApp/src/tests/: example.test.ts
Source/Core/VitalService/Backend/: AddVitalServiceAsAService.ps1  app.manifest
Source/Core/VitalService/NotRespondingApp/: Form1.cs
Source/Dev Environment Helpers/influxdb2/: docker-compose.yml
Source/GeneratedCodeArtifact/: VitalRustServiceClasses.ts
Source/NotRespondingApp/: Form1.Designer.cs  Program.cs
Source/Scripts/: Execute.ts
Source/Services/VitalRustService/: Cargo.toml  Rocket.toml  generateRustTypings.ts  package-lock.json  package.json
Source/Services/VitalRustService/migrations/: 001_app_schema.sql  002_metrics_schema.sql
Source/Services/VitalRustService/src/: api.rs  api_legacy.rs  commands.rs  generated_api_def.rs  generated_client_api_dto_def.rs  generated_vital_rust_service_api_def.rs  machine.rs  main.rs  nvidia.rs  rocket_endpoints.rs  software.rs  windows.rs
Source/Services/VitalRustService/src/api/: guards.rs  hello.rs  mod.rs  process.rs  profile.rs  settings.rs  system.rs
Source/Services/VitalRustService/src/applescripts/: get_mainwindow_title.scpt
Source/Services/VitalRustService/src/db/: app.rs  mod.rs
Source/Services/VitalRustService/src/machine_stats/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  net.rs
Source/Services/VitalRustService/src/models/: dto.rs  settings.rs
Source/Services/VitalRustService/src/platform/: mod.rs  windows.rs
Source/Services/VitalRustService/src/services/: config_applyer.rs  metrics_storage.rs  mod.rs
Source/Services/VitalRustService/src/stores/: machine_data_store.rs  mod.rs
Source/Services/VitalRustService/tests/: store_tests.rs  system_data_tests.rs
Source/Services/VitalService/: Vital.sln
Source/Services/VitalService/Backend/: Reinforced.Typings.settings.xml  VitalService - Backup.csproj
Source/Services/VitalService/Shared/: Reinforced.Typings.settings.xml  ReinforcedTypingsConfiguration.cs  ReinforcedTypingsDummy.cs  Shared - Backup (1).csproj  Shared - Backup.csproj  Shared.csproj  SwaggerRequiredAttribute.cs
Source/Services/VitalService/VitalGetterClasses/: CpuUsage.cs  Disk.cs  DiskUsage.cs  GpuUsage.cs  MemUsage.cs  NetworkAdapterUsage.cs  NetworkUsage.cs  PidProcessTitleMapping.cs  ProcessData.cs  ProcessGpuUtil.cs  Reinforced.Typings.settings.xml  (+6 more)
Source/Shared/Dtos/: ManagedModelDto.cs  ProcessToAddDto.cs  ProfileDto.cs
Source/Wix/: Bundle.wxs  Wix.wixproj
Source/vite-project/: package.json  pnpm-lock.yaml
Source/vite-project/src/: App.tsx  main.tsx
configuration/: PrChangeLogConfig.json
(+489 files in other folders)
