[package]
name = "vital_utilities"
version = "0.0.0"
description = "A Tauri App"
authors = ["Snazzie", "Aaron Cooper"]
license = ""
repository = ""
default-run = "vital_utilities"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
release = true
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[profile.release.package.wry]
debug = false
debug-assertions = false

[profile.dev.package.wry]
debug = true
debug-assertions = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "devtools", "system-tray", "updater"] }
winapi = { version = "0.3", features = ["winuser"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
fern = "0.6"
sentry = "0.31"
sysinfo = "0.29"
regex = "1"
chrono = "0.4"
webbrowser = "0.8"
once_cell = "1.18"
vital_service_api = { path = "../../CodeGen/v1/Rust/VitalServiceApiClient" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
release = []
