[package]
name = "vital_utilities"
version = "0.0.0"
description = "The ultimate system utility - Task Manager alternative with process profiles and system monitoring"
authors = ["Snazzie", "Aaron Cooper"]
license = ""
repository = ""
default-run = "vital_utilities"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true        # Remove debug symbols

[profile.release.package.wry]
debug = false
debug-assertions = false

[profile.dev.package.wry]
debug = true
debug-assertions = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
winapi = { version = "0.3", features = ["winuser"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
fern = "0.7.1"
sentry = "0.32"
sysinfo = "0.37.2"
regex = "1"
chrono = { version = "0.4.38", features = ["serde"] }
time = "0.3.36"
webbrowser = "0.8"
once_cell = "1.18"
vital_service_api = { path = "../../CodeGen/v1/Rust/VitalServiceApiClient" }

# VitalRustService dependencies (embedded backend)
systemstat = "0.2"
nvml-wrapper = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
directories = "5.0.1"
dirs = "5.0"
default-net = "0.22"
dashmap = "5.5"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dependencies.windows]
version = "0.54"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
]

[target.'cfg(windows)'.dependencies]
winproc = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
mach2 = "0.4"
plist = "1.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
release = []
