[package]
name = "VitalRustService"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23.4"
systemstat = "0.1.10"
nvml-wrapper = "0.7.0"
chrono = "0.4.19"
serde_json = "1.0"
serde_derive ="1.0"
reqwest = { version = "0.11", features = ["json"] }
directories = "4.0.1"
log = {version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
once_cell = "1.9.0"
default-net = "0.8.1"
# rocket = {version = "0.5.0-rc.1", features = ["json"] }
winproc  = { version = "0.6.4"}

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System_StationsAndDesktops",
    "Win32_System_LibraryLoader",
    "Win32_Foundation"
]

#[target.'cfg(windows)'.dependencies]
# nvapi = "0.1.3"
