[package]
name = "VitalRustService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# System monitoring
sysinfo = "0.30"
systemstat = "0.2"
nvml-wrapper = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# Web framework
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# Async runtime
tokio = { version = "1.33.0", features = ["full"] }

# Serialization
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

# Pin time crate to fix compilation issue with newer Rust
time = "0.3.36"

# Utilities
reqwest = { version = "0.12", features = ["json"] }
directories = "5.0.1"
dirs = "5.0"
once_cell = "1.18"
regex = "1.10.2"
default-net = "0.22"
dashmap = "5.5"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Keep vital_service_api for now (transitional - types used by existing collectors)
vital_service_api = { path = "../../CodeGen/v1/Rust/VitalServiceApiClient" }

# Logging (legacy, to be replaced by tracing)
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }
winproc = { version = "0.6" }

#[target.'cfg(windows)'.dependencies]
# nvapi = "0.1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
